--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,7 @@ security:
                 password_path: password
                 success_handler: App\Security\LoginSuccessHandler
                 failure_handler: App\Security\LoginFailureHandler
+            custom_authenticator: App\Security\CustomAuthenticator
 
         api:
             pattern: ^/api
@@ -35,4 +36,5 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/registration, roles: PUBLIC_ACCESS }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: PUBLIC_ACCESS }
