--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.50"
+        "symfony/maker-bundle": "^1.50",
+        "zircote/swagger-php": "^5.1"
     },
     "config": {
         "allow-plugins": {
