--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,6 +3,12 @@ services:
         autowire: true
         autoconfigure: true
 
+    App\Controller\:
+        resource: '../src/Controller/'
+        tags: ['controller.service_arguments']
+        autowire: true
+        autoconfigure: true
+
     serializer.normalizer.object.inner:
         alias: 'serializer.normalizer.object'
         public: false
