--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,11 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
         "symfony/maker-bundle": "^1.50",
+        "symfony/phpunit-bridge": "^7.3",
         "zircote/swagger-php": "^5.1"
     },
     "config": {
