ajout et/ou modifications des tests fonctionnels pour les controllers : security, user et evenements .

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,4 +36,4 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/registration, roles: PUBLIC_ACCESS }
         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/evenements, roles: PUBLIC_ACCESS, methods: [GET] }
