--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,12 +1,11 @@
-# public/.htaccess
-
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    # On redirige tout sauf les fichiers/dossiers existants
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
+    # Si le fichier ou dossier existe, on le sert tel quel
+    RewriteCond %{REQUEST_FILENAME} -f [OR]
+    RewriteCond %{REQUEST_FILENAME} -d
+    RewriteRule ^ - [L]
 
-    # Tout le reste va vers index.html
-    RewriteRule ^ index.html [QSA,L]
+    # Sinon, on laisse Symfony gérer via index.php
+    RewriteRule ^ index.php [L]
 </IfModule>
