--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,11 @@
 security:
     enable_authenticator_manager: true
 
+    # Hiérarchie des rôles - les admins héritent des permissions des organisateurs
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_ORGANISATEUR
+        ROLE_ORGANISATEUR: ROLE_USER
+
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
