--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,57 @@
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> Développement ###
+# IDE et éditeurs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+/logs/
+*.log.*
+
+# Sauvegarde et fichiers temporaires
+*.tmp
+*.temp
+*.bak
+*.backup
+*~
+\#*\#
+.\#*
+
+# Node modules (si utilisation de npm/yarn pour assets)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Uploads et fichiers utilisateurs (à ajuster selon besoins)
+/public/uploads/
+/public/Images/uploads/
+
+# Cache et fichiers de build
+.sass-cache/
+*.css.map
+*.js.map
+
+# Fichiers de configuration sensibles
+.env.prod
+.env.prod.local
+/config/jwt/
+###< Développement ###
