--- a/.upsun.yaml
+++ b/.upsun.yaml
@@ -1,59 +1,72 @@
-name: app
+applications:
+  app:
+    type: php:8.3
 
-type: php:8.3
+    runtime:
+        extensions:
+            - apcu
+            - mbstring
+            - sodium
+            - ctype
+            - iconv
+            
 
-runtime:
-    extensions:
-        - apcu
-        - mbstring
-        - sodium
-        - ctype
-        - iconv
+    #variables:
+    #    php:
+    #        # uncomment on PHP 7.4+
+    #        #opcache.preload: config/preload.php
+
+    build:
+        flavor: none
+
+    disk: 1024
+
+    web:
+        locations:
+            "/":
+                root: "public"
+                expires: 1h
+                passthru: "/index.php"
+
+    mounts:
+        "/var/cache": { source: local, source_path: var/cache }
+
+    relationships:
+      database: "db:mysql"
         
+    hooks:
+        build: |
+            set -x -e
 
-#variables:
-#    php:
-#        # uncomment on PHP 7.4+
-#        #opcache.preload: config/preload.php
+            curl -fs https://get.symfony.com/cloud/configurator | bash
+            
+            NODE_VERSION=22 symfony-build
 
-build:
-    flavor: none
+        deploy: |
+            set -x -e
 
-disk: 1024
+            symfony-deploy
 
-web:
-    locations:
-        "/":
-            root: "public"
-            expires: 1h
-            passthru: "/index.php"
+    crons:
+        security-check:
+            # Check that no security issues have been found for PHP packages deployed in production
+            spec: '50 23 * * *'
+            cmd: if [ "$PLATFORM_ENVIRONMENT_TYPE" = "production" ]; then croncape COMPOSER_ROOT_VERSION=1.0.0 COMPOSER_AUDIT_ABANDONED=ignore composer audit --no-cache; fi
+        clean-expired-sessions:
+            spec: '17,47 * * * *'
+            cmd: croncape php-session-clean
 
-mounts:
-    "/var/cache": { source: local, source_path: var/cache }
+services:
+  db:
+    type: mysql:8.0
+    disk: 512
 
-relationships:
-  database: "db:mysql"
-    
-hooks:
-    build: |
-        set -x -e
-
-        curl -fs https://get.symfony.com/cloud/configurator | bash
-        
-        NODE_VERSION=22 symfony-build
-
-    deploy: |
-        set -x -e
-
-        symfony-deploy
-
-crons:
-    security-check:
-        # Check that no security issues have been found for PHP packages deployed in production
-        spec: '50 23 * * *'
-        cmd: if [ "$PLATFORM_ENVIRONMENT_TYPE" = "production" ]; then croncape COMPOSER_ROOT_VERSION=1.0.0 COMPOSER_AUDIT_ABANDONED=ignore composer audit --no-cache; fi
-    clean-expired-sessions:
-        spec: '17,47 * * * *'
-        cmd: croncape php-session-clean
+routes:
+  "https://{all}/":
+    type: upstream
+    upstream: "app:http"
+  "http://{all}/":
+    type: redirect
+    to: "https://{all}/"
 
 
