--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -9,17 +9,9 @@ applications:
             - sodium
             - ctype
             - iconv
-            
-
-    #variables:
-    #    php:
-    #        # uncomment on PHP 7.4+
-    #        #opcache.preload: config/preload.php
 
     build:
         flavor: none
-
-    disk: 1024
 
     web:
         locations:
@@ -29,7 +21,7 @@ applications:
                 passthru: "/index.php"
 
     mounts:
-        "/var/cache": { source: local, source_path: var/cache }
+        "/var/cache": { source: tmp, source_path: var/cache }
 
     relationships:
       database: "db:mysql"
@@ -49,17 +41,17 @@ applications:
 
     crons:
         security-check:
-            # Check that no security issues have been found for PHP packages deployed in production
             spec: '50 23 * * *'
-            cmd: if [ "$PLATFORM_ENVIRONMENT_TYPE" = "production" ]; then croncape COMPOSER_ROOT_VERSION=1.0.0 COMPOSER_AUDIT_ABANDONED=ignore composer audit --no-cache; fi
+            commands:
+                start: if [ "$PLATFORM_ENVIRONMENT_TYPE" = "production" ]; then croncape COMPOSER_ROOT_VERSION=1.0.0 COMPOSER_AUDIT_ABANDONED=ignore composer audit --no-cache; fi
         clean-expired-sessions:
             spec: '17,47 * * * *'
-            cmd: croncape php-session-clean
+            commands:
+                start: croncape php-session-clean
 
 services:
   db:
     type: mysql:8.0
-    disk: 512
 
 routes:
   "https://{all}/":
@@ -68,5 +60,3 @@ routes:
   "http://{all}/":
     type: redirect
     to: "https://{all}/"
-
-
