--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -24,7 +24,7 @@ applications:
         "/var/cache": { source: tmp, source_path: var/cache }
 
     relationships:
-      database: "db:mariadb"
+      database: "db:mysql"
         
     hooks:
         build: |
@@ -51,7 +51,7 @@ applications:
 
 services:
   db:
-    type: mariadb:11.4
+    type: mysql:8.0
 
 routes:
   "https://{all}/":
