Add var/log mount for Symfony logs

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -22,6 +22,7 @@ applications:
 
     mounts:
         "/var/cache": { source: tmp, source_path: var/cache }
+        "/var/log": { source: tmp, source_path: var/log }
 
     relationships:
       database: "db:mysql"
