feat: update Upsun configuration for production deployment
- Configure MySQL 8.0 database with proper credentials
- Set up production environment variables
- Enable database migrations on deployment
- Configure proper build and deploy hooks

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -26,6 +26,11 @@ applications:
 
     relationships:
       database: "db:mysql"
+
+    variables:
+        env:
+            # Override database version detection
+            APP_ENV: prod
         
     hooks:
         build: |
