refactor: réorganisation des fichiers de configuration et scripts
- Déplacement de phpmyadmin-upsun-config.php vers config/ pour une meilleure organisation
- Suppression des scripts d'import SQL temporaires (archivés localement)
- Suppression de l'utilitaire hash_password.php (archivé localement)
- Mise à jour du .gitignore pour exclure les futurs fichiers temporaires

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,9 @@ yarn.lock
 .env.prod
 .env.prod.local
 /config/jwt/
+
+# Scripts d'import et fichiers temporaires de migration
+import_*.sql
+hash_password.php
+/archive/migration-scripts/
 ###< Développement ###
