--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,6 +30,7 @@ web:
 
 mounts:
     "/var/cache": { source: local, source_path: var/cache }
+    "/public/Images/images event": { source: local, source_path: images_event }
 
 relationships:
   database: "db:mysql"
