Configuration Upsun pour stockage persistant des images
- Ajouté mount '/public/uploads' avec source storage dans .upsun/config.yaml
- Supprimé .platform.app.yaml vide
- Les images uploadées seront maintenant persistantes entre déploiements

--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -23,6 +23,7 @@ applications:
     mounts:
         "/var/cache": { source: tmp, source_path: var/cache }
         "/var/log": { source: tmp, source_path: var/log }
+        "/public/uploads": { source: storage, source_path: uploads }
 
     relationships:
       database: "db:mysql"
